--- a/FrameworksAndDrivers/appsettings.json
+++ b/FrameworksAndDrivers/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ToDoAppDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "Swagger": {
+    "Enabled": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
